# ExpertPython

./: Dockerfile  pyproject.toml
expertpython/: ml.ipynb  ml.py
tests/: test_expertpython.py
