[tool.poetry]
name = "ExpertPython"
version = "0.1.0"
description = ""
authors = ["BENBRIKMouad <benbrikmouad@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
pandas = "^1.4.3"
Quandl = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^6.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
